# Tenstorrent-WH-BlockSpMM

./: .gitignore  CMakeLists.txt  ENVIRONMENT.md  INSTALL.md  README.md  REPRODUCE.md  requirements.txt
GEMM_profiling/: read_sddmm_profiler.py  read_spmm_profiler.py
block_sddmm/: CMakeLists.txt  PROFILING_PLAN.md
block_sddmm/inc/: CMakeLists.txt  host_code.hpp  include_me.hpp  profiling_suite.hpp  test_suite.hpp
block_sddmm/inc/host_code/: CMakeLists.txt  bsr_sddmm_multicore_CDA.cpp  bsr_sddmm_multicore_SnF_C.cpp  bsr_sddmm_multicore_naive.cpp  host_code_utils.cpp  sddmm_zone_config.hpp
block_sddmm/kernels/common/: sddmm_reader_common.hpp
block_sddmm/kernels/compute/: sddmm_block_multiply.cpp
block_sddmm/kernels/dataflow/: data_movement_sddmm_BC.cpp  data_movement_sddmm_BC_CDA.cpp  data_movement_sddmm_BC_SnF.cpp  data_movement_sddmm_D_CDA_out.cpp  data_movement_sddmm_D_SnF_out.cpp  data_movement_sddmm_D_out.cpp
block_sddmm/sddmm_scripts/: run_sddmm_profiling.sh
block_sddmm/src/: export_sddmm.cpp  profile_sddmm.cpp  run_sddmm.cpp  test_sddmm.cpp
block_spmm/: PROFILING_PLAN.md
block_spmm/inc/: bsr_matrix.hpp  host_code.hpp  host_code_utils.hpp  include_me.hpp  profiling_suite.hpp  test_suite.hpp
block_spmm/inc/host_code/: CMakeLists.txt  bsr_spmm_multicore_load_balanced_new_DM.cpp  bsr_spmm_multicore_snf.cpp  bsr_spmm_multicore_snfin0_cdain1.cpp  host_code_utils.cpp  spmm_zone_config.hpp
block_spmm/kernels/common/: spmm_indexing.hpp  spmm_profiling.hpp  spmm_reader_common.hpp  spmm_tile_ops.hpp
block_spmm/kernels/compute/: bmm_iter.cpp
block_spmm/kernels/dataflow/: reader_in0_naive.cpp  reader_in1_chain_of_direct_addressing.cpp  reader_in1_chain_of_direct_addressingV2.cpp  reader_in1_naive.cpp  reader_snf_in0_reader.cpp  reader_snf_in1_reader.cpp
block_spmm/scripts/: count_dram_reads.py  dram_reads_load_imbalance.csv  dram_reads_load_imbalance_random.csv  dram_reads_load_imbalance_upper.csv  dram_reads_mixed_sweep.csv  dram_reads_multi_diag_ultra_sparse.csv  dram_reads_sweep_pattern.csv  experiments.txt  experiments_dram_reads_table.tex  experiments_with_numbers.txt  extract_figure_dram_reads.py  load_balance_algorithm.tex  make_load_imbalance_table.py  plot_all.sh  plot_load_imbalance.py  plot_load_imbalance_comparison.py  plot_load_imbalance_random.py  plot_load_imbalance_upper.py  plot_mixed_sweep.py  plot_multi_diag_ultra_sparse.py  plot_sweep_pattern.py  plot_sweep_pattern_host.py  report_load_imbalance.py  run_all.sh  run_load_imbalance.sh  run_load_imbalance_random.sh  run_load_imbalance_upper.sh  run_mixed_sweep.sh  run_multi_diag_ultra_sparse.sh  run_profiling.sh  run_sweep_pattern.sh
block_spmm/scripts/figures/: dda_alg.xml  load_imbalance_table.csv  load_imbalance_table.tex
block_spmm/scripts/figures_dram_reads/: dram_reads_load_imbalance.csv  dram_reads_load_imbalance_comparison.csv  dram_reads_load_imbalance_random.csv  dram_reads_load_imbalance_upper.csv  dram_reads_mixed_sweep_d06.csv  dram_reads_mixed_sweep_d50.csv  dram_reads_multi_diag_ultra_sparse.csv  dram_reads_sweep_pattern_standard.csv  dram_reads_sweep_pattern_ultrasparse.csv
block_spmm/src/: export_block_spmm_to_csv.cpp  profile_block_spmm.cpp  run_block_spmm.cpp  test_block_spmm.cpp
host_integration/: README.md  programming_examples.patch  setup_tracy_symlinks.sh
paper_reproduce/: aggregate_fig.py  aggregate_table1.py  aggregate_table2.py  aggregate_table3.py  reproduce_fig3.sh  reproduce_fig4.sh  reproduce_table1.sh  reproduce_table2.sh  reproduce_table3.sh  run_all.sh
sparse_common/: CMakeLists.txt  bsr_matrix.hpp  host_code_utils.cpp
